2013-05-07 Florian Dejonckheere <florian@floriandejonckheere.be>

	* ipmitool-1.8.12-3 :
	Minor PKGBUILD changes
	Added changelog