@@ -1,8 +1,8 @@
 # Maintainer: boenki <boenki at gmx dot de>
 
 pkgname=ffdiaporama-devel
-pkgver=1.6.beta5
-pkgrel=2
+pkgver=1.6.beta6
+pkgrel=1
 pkgdesc="Creation of videos from images, titles, music (development version)"
 arch=('i686' 'x86_64')
 url="http://ffdiaporama.tuxfamily.org"
@@ -10,8 +10,8 @@ license=('GPL2')
 conflicts=('ffdiaporama')
 depends=('qimageblitz' 'ffmpeg' 'exiv2' 'taglib' 'shared-mime-info')
 install=${pkgname}.install
-source=(https://launchpad.net/ffdiaporama/1.6-devel/1.6.beta5.20130421/+download/ffdiaporama_1.6.b5.2013.0423.tar.gz)
-md5sums=('868daeefb8d2bb8553c92bcf9c7b783e')
+source=(https://launchpad.net/ffdiaporama/1.6-devel/1.6.beta6.20130602/+download/ffdiaporama_1.6.b6.2013.0602.tar.gz)
+md5sums=('5152d3d722e824e150c5cf5f67466781')
 
 build() {
   qmake-qt4 PREFIX=/usr ffDiaporama.pro
