@@ -1,7 +1,7 @@
 #Maintainer: jsh <jsh at myreseau dot org>
 
 pkgname=gnome-shell-extension-topicons
-pkgver=12
+pkgver=13
 pkgrel=1
 pkgdesc="Shows legacy tray icons on top."
 arch=('any')
@@ -10,13 +10,13 @@ license=('GPL')
 depends=('gnome-shell')
 makedepends=('unzip')
 groups=('gnome-shell-extensions')
-source=('https://extensions.gnome.org/review/download/2680.shell-extension.zip')
-sha256sums=('b3332fc1268181b0a776d549da355b8cd5f1f7f5c0adbfde5feb14de2a934928')
-noextract=("2680.shell-extension.zip")
+source=('https://extensions.gnome.org/review/download/3032.shell-extension.zip')
+sha256sums=('57ef331350aebecdf69e1503140131f9e693a0ad0a6b1ca6b2088c8a490fbbf8')
+noextract=("3032.shell-extension.zip")
 
 build() {
   cd "$srcdir"
-  unzip 2680.shell-extension.zip
+  unzip 3032.shell-extension.zip
 }
 
 package() {
