@@ -3,7 +3,7 @@
 
 pkgname=ipmitool
 pkgver=1.8.12
-pkgrel=3
+pkgrel=4
 pkgdesc="Command-line interface to IPMI-enabled devices"
 arch=('i686' 'x86_64')
 url="http://ipmitool.sourceforge.net"
@@ -21,5 +21,13 @@ build(){
 
 package(){
 	cd "${srcdir}/${pkgname}-${pkgver}"
+	sed -i '
+		s/bin_PROGRAMS = ipmitool$(EXEEXT)/bin_PROGRAMS = ipmitool$(EXEEXT) ipmievd$(EXEEXT)/
+		/sbin_PROGRAMS = ipmievd$(EXEEXT)/d
+	' src/Makefile
 	make DESTDIR="${pkgdir}" install
+	rmdir "${pkgdir}/usr/sbin"
+
+	# Install license
+	install -Dm644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
