@@ -3,7 +3,7 @@
 
 pkgname=libaacplus
 pkgver=2.0.2
-pkgrel=6
+pkgrel=7
 pkgdesc="3GPP AAC+ High Efficiency Advanced Audio Codec v2 (HE-AAC+) Encoder Shared Library"
 arch=('i686' 'x86_64')
 url="http://217.20.164.161/~tipok/aacplus"
@@ -11,7 +11,8 @@ license=('LGPL' '3GPP')
 options=(!makeflags !libtool)
 conflicts=('aacplusenc')
 provides=('aacplusenc')
-depends=('glibc' 'fftw')
+optdepends=('fftw')
+depends=('glibc')
 makedepends=('unzip')
 source=(http://217.20.164.161/~tipok/aacplus/$pkgname-$pkgver.tar.gz)
 md5sums=('3fc15d5aa91d0e8b8f94acb6555103da')
