@@ -9,9 +9,9 @@ true && pkgname=(linux-grsec-lts linux-grsec-lts-headers)
 _kernelname=${pkgname#linux}
 _basekernel=3.2
 _grsecver=2.9.1
-_timestamp=201305292150
-pkgver=${_basekernel}.45
-pkgrel=3
+_timestamp=201306011535
+pkgver=${_basekernel}.46
+pkgrel=1
 arch=(i686 x86_64)
 url="http://www.kernel.org/"
 license=(GPL2)
@@ -289,8 +289,8 @@ package_linux-grsec-lts-headers() {
 }
 
 sha256sums=('dd96ed02b53fb5d57762e4b1f573460909de472ca588f81ec6660e4a172e7ba7'
-            'e27e8f702a6ef15ed048f13d590906c25e117073bb4ec9e112510ae3e6901764'
-            'b7f6dc42b747fad6f6b7702efd75a7089962ce2e3b265fca8048166755061f88'
+            'a46fd80c8418952230e1b0f5ceef199cb5a6192937802a6618a31d30120a8e06'
+            '8a3e1e48b858d0848a8bb5ee218771f01b9176ebf6b4b3e9450ae9e7e7962aea'
             '3c0e95f32765a1874dc60d314f412b21c7a011bbb5ce2c50383edf76cec2be2e'
             'cb60893ecfc4bcee200f7f9e3639c837240f9f66b015a98c85243272288f06a6'
             'e5ba8179245b565851f76b54c16f8aa514cbda0fdd165d96446abdc49d6c0687'
