@@ -1,13 +1,9 @@
-# This is an example PKGBUILD file. Use this as a start to creating your own,
-# and remove these comments. For more information, see 'man PKGBUILD'.
-# NOTE: Please fill out the license field for your package! If it is unknown,
-# then please put 'unknown'.
-
-# Maintainer: tasty_minerals <mountpeaks@gmail.com>
+# Maintainer: tasty_minerals <tastyminerals@gmail.com>
 pkgname=lls
-pkgver=1.0
+pkgver=1.1
 pkgrel=1
-pkgdesc="(ls) command alternative, more colors and additional info, check it out!"
+pkgdesc="(ls) command alternative, more colors and additional info, 
+check it out!"
 arch=(any)
 url="http://code.google.com/p/lls/"
 license=('MIT')
@@ -15,6 +11,5 @@ depends=('file')
 source=('http://lls.googlecode.com/files/lls')
 md5sums=('82e1e78020c9fed07cd041cf5eead85c')
 build () {
-	install -D -m755 lls $pkgdir/usr/local/bin/lls
+	install -D -m755 lls $pkgdir/usr/bin/lls
 }
-
