@@ -2,11 +2,11 @@
 pkgname=nautilus-share
 pkgver=0.7.3
 pkgdesc='Share Samba files and folders through the right click menu in Nautilus.'
-pkgrel=5
+pkgrel=6
 url="http://gnome.org"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('nautilus' 'libglade' 'samba' 'gnome-shell')
+depends=('nautilus' 'samba')
 conflicts=('nautilus-share-upstream')
 makedepends=('intltool')
 backup=('etc/samba/usershare.conf')
