@@ -1,20 +1,19 @@
-# Maintainer: Piotr Rogoża <rogoza dot piotr at gmail dot com>
-# Contributor: Piotr Rogoża <rogoza dot piotr at gmail dot com>
-# Contributor: <firmicus ατ gmx δοτ net>
 # vim:set ts=2 sw=2 et ft=sh tw=100: expandtab
+# Maintainer: Piotr Rogoża <rogoza dot piotr at gmail dot com>
+# Contributor: <firmicus ατ gmx δοτ net>
 
 _author=B/BR/BRICKER
 _perlmod=Config-Std
 pkgname=perl-config-std
 pkgver=0.900
-pkgrel=3
+pkgrel=4
 pkgdesc="Config::Std - Load and save configuration files in a standard format"
 arch=('any')
 url="http://search.cpan.org/dist/Config-Std"
 license=('GPL' 'PerlArtistic')
 groups=()
-depends=('perl-class-std')
-makedepends=()
+depends=(perl-class-std)
+makedepends=(perl-class-std)
 provides=(
   perl-config-std-block
   perl-config-std-comment
