@@ -1,0 +1,19 @@
+# Maintainer: Felix Yan <felixonmars@gmail.com>
+
+pkgname=python2-dicttoxml
+_pypiname=dicttoxml
+pkgver=1.1.2
+pkgrel=1
+pkgdesc="Simple library to convert a native Python dictionary into XML"
+arch=('any')
+url="https://github.com/quandyfactory/dicttoxml"
+license=('GPL2')
+depends=('python2')
+source=("https://pypi.python.org/packages/source/d/${_pypiname}/${_pypiname}-${pkgver}.tar.gz")
+
+package() {
+  cd "${srcdir}/${_pypiname}-${pkgver}"
+  python2 setup.py install --root "${pkgdir}"
+}
+
+sha512sums=('d8dcdc9ebdf44a7a1028e888b4dd6f2a7fefcf552f0658476398531304641e7765f32b4b09f4511a856a466b54ac904dac032b4fd4af76456426e2803ea36bec')
