@@ -1,7 +1,7 @@
 # Maintainer: jsteel <mail at jsteel dot org>
 
 pkgname=somagic-easycap-tools
-pkgver=1.0
+pkgver=1.1
 pkgrel=1
 pkgdesc="Tool to extract the firmware for the Somagic EasyCAP DC60 and EasyCAP002 (original CD needed)"
 url="http://code.google.com/p/easycap-somagic-linux"
@@ -10,16 +10,16 @@ license=('GPL2')
 depends=('libgcrypt')
 install=$pkgname.install
 source=(http://easycap-somagic-linux.googlecode.com/files/${pkgname}_$pkgver.tar.gz)
-md5sums=('d42d024dd54c7fdd638e742cf187a48f')
+md5sums=('e75476b067560e7d55d95e0a0931d70d')
 
 build() {
-  cd "${srcdir}/somagic-extract-firmware"
+  cd "$srcdir"/${pkgname}_$pkgver
 
   make
 }
 
 package() {
-  cd "${srcdir}/somagic-extract-firmware"
+  cd "$srcdir"/${pkgname}_$pkgver
 
-  make PREFIX="$pkgdir"/usr install
+  make PREFIX="$pkgdir"/usr/ install
 }
