@@ -1,7 +1,7 @@
 # Maintainer: jsteel <mail at jsteel dot org>
 
 pkgname=somagic-easycap
-pkgver=1.0
+pkgver=1.1
 pkgrel=1
 pkgdesc="Linux Somagic EasyCAP DC60 and EasyCAP002 capture software"
 url="http://code.google.com/p/easycap-somagic-linux"
@@ -10,16 +10,16 @@ license=('GPL2')
 depends=('libusbx' 'libgcrypt')
 optdepends=('somagic-easycap-tools: to extract the firmware')
 source=(http://easycap-somagic-linux.googlecode.com/files/${pkgname}_$pkgver.tar.gz)
-md5sums=('e0bbea93084ef583e4dd36360c0742ab')
+md5sums=('7e8942256b09f2c741658d567d62c202')
 
 build() {
-  cd "${srcdir}/user"
+  cd "$srcdir"/${pkgname}_$pkgver
 
   make
 }
 
 package() {
-  cd "${srcdir}/user"
+  cd "$srcdir"/${pkgname}_$pkgver
 
-  make PREFIX="$pkgdir"/usr install
+  make PREFIX="$pkgdir"/usr/ install
 }
