@@ -1,6 +1,6 @@
 pkgname=terasology-devbuild
 pkgver=devel
-pkgrel=18
+pkgrel=19
 pkgdesc="Yet another high resolution game with blocks like Minecraft! (Last succesful development build)"
 arch=('x86_64' 'i686')
 license=('Apache')
