@@ -3,7 +3,7 @@
 
 pkgname=xfsdump
 pkgver=3.1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Additional XFS filesystem utilities"
 arch=(i686 x86_64)
 url="http://oss.sgi.com/projects/xfs/"
@@ -19,15 +19,19 @@ sha512sums=('18f5ce7e249b317247012246fd7c5980f62cc46a5718adc80a3137be4f2d7c47edd
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-
   ./configure --prefix=/usr
   make
 }
 
 package() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-
   make DIST_ROOT="${pkgdir}" install
+
+  # hack to merge binaries from /sbin and /usr/sbin into /usr/bin #
+  mkdir -p $pkgdir/usr/bin
+  mv $pkgdir/{sbin/*,usr/sbin/xfsinvutil} $pkgdir/usr/bin
+  rm -rf $pkgdir/{sbin,usr/sbin}
+
   chown -R root $pkgdir
   chgrp -R root $pkgdir
 }
